[package]
name = "cosmicarchive-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
itch-io = { git = "https://github.com/adumbidiot/itch-io-rs", version = "0.0.0" }
serde = { version = "1.0.205", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.2"
reqwest = "0.12.5"
serde_json = "1.0.122"
itertools = "0.13.0"
zip-extract = "0.1.3"
zip = "2.1.6"
log = "0.4.22"
env_logger = "0.11.5"
sha2 = "0.10.8"
hex = "0.4.3"
derive-new = "0.6.0"
thiserror = "1.0.63"
once_cell = "1.19.0"
