[package]
name = "cosmicarchive-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
derive-new = "0.6.0"
env_logger = "0.11.5"
hex = "0.4.3"
itch-io = { git = "https://github.com/adumbidiot/itch-io-rs", version = "0.0.0" }
itertools = "0.13.0"
log = "0.4.22"
once_cell = "1.19.0"
reqwest = "0.12.5"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
sha2 = "0.10.8"
url = "2.5.2"
zip = "2.1.6"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["io-util", "macros", "rt-multi-thread"] }
